--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <body>
       
       <video  width = "300" height = "200" controls autoplay>
-         <source src = "https://scontent.cdninstagram.com/v/t66.36240-6/10000000_682882796203612_3664636051817483511_n.mp4?_nc_cat=103&ccb=1-5&_nc_sid=985c63&efg=eyJybHIiOjIxNjcsInJsYSI6NDA5NiwidmVuY29kZV90YWciOiJvZXBfaGQifQ%3D%3D&_nc_ohc=BvyHcPwcpOsAX-wJ0CR&rl=2167&vabr=1445&_nc_ht=scontent-frt3-2.xx&edm=APRAPSkEAAAA&oh=00_AT8M7WLnrEWjIbLAOImqvwJ0wkV-jI8bHVeJmAi9ski-rQ&oe=61FC3C12" type = "video/mp4" />
+         <source src = "https://sss4.bilu14.com/cdn/down/disk2/3b067e840d01ec03d2735e5260b50a2a/Video/720p/720p_003.html" type = "video/mp4" />
          Your browser does not support the <video> element.
       </video>
       
