--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <body>
       
       <video  width = "300" height = "200" controls autoplay>
-         <source src = "https://sss4.bilu14.com/cdn/down/disk2/3b067e840d01ec03d2735e5260b50a2a/Video/720p/720p_003.html" type = "video/mp4" />
+         <source src = "https://drive.google.com/file/d/1foaoKWcTdy2tXinx2qx24Ds0O0yPQIIz/view?usp=sharing" type = "video/mp4" />
          Your browser does not support the <video> element.
       </video>
       
