--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
    <head>
-      <meta http-equiv="refresh" content="0; URL=14.186.168.82" />
+      <meta http-equiv="refresh" content="0; URL=http://14.186.168.82" />
       <script type="text/javascript">
          function htmlReady() {
          }
