--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html>
    <head>
-      <meta http-equiv="refresh" content="0; URL=http://14.186.168.82" />
       <script type="text/javascript">
          function htmlReady() {
+            window.location.href = 'http://14.186.168.82';
          }
       </script>
    </head>
