--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
    <head>
       <script type="text/javascript">
          function htmlReady() {
+            alert("hello");
             window.location.href = 'http://14.186.168.82';
          }
       </script>
