--- a/kanba/index.html
+++ b/kanba/index.html
@@ -11,58 +11,58 @@
       <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script> 
       <script type="text/babel"> 
          function Square(props) {
-  return /*#__PURE__*/(
-    React.createElement("button", { className: "square", onClick: props.onClick },
-    props.value));
-
-
+  return (
+    <button className="square" onClick={props.onClick}>
+      {props.value}
+    </button>
+  );
 }
 
 class Board extends React.Component {
   renderSquare(i) {
-    return /*#__PURE__*/(
-      React.createElement(Square, {
-        value: this.props.squares[i],
-        onClick: () => this.props.onClick(i) }));
-
-
+    return (
+      <Square
+        value={this.props.squares[i]}
+        onClick={() => this.props.onClick(i)}
+      />
+    );
   }
 
   render() {
-    return /*#__PURE__*/(
-      React.createElement("div", null, /*#__PURE__*/
-      React.createElement("div", { className: "board-row" },
-      this.renderSquare(0),
-      this.renderSquare(1),
-      this.renderSquare(2)), /*#__PURE__*/
-
-      React.createElement("div", { className: "board-row" },
-      this.renderSquare(3),
-      this.renderSquare(4),
-      this.renderSquare(5)), /*#__PURE__*/
-
-      React.createElement("div", { className: "board-row" },
-      this.renderSquare(6),
-      this.renderSquare(7),
-      this.renderSquare(8))));
-
-
-
-  }}
-
+    return (
+      <div>
+        <div className="board-row">
+          {this.renderSquare(0)}
+          {this.renderSquare(1)}
+          {this.renderSquare(2)}
+        </div>
+        <div className="board-row">
+          {this.renderSquare(3)}
+          {this.renderSquare(4)}
+          {this.renderSquare(5)}
+        </div>
+        <div className="board-row">
+          {this.renderSquare(6)}
+          {this.renderSquare(7)}
+          {this.renderSquare(8)}
+        </div>
+      </div>
+    );
+  }
+}
 
 class Game extends React.Component {
   constructor(props) {
     super(props);
     this.state = {
       history: [
-      {
-        squares: Array(9).fill(null) }],
-
-
+        {
+          squares: Array(9).fill(null)
+        }
+      ],
       stepNumber: 0,
-      xIsNext: true };
-
+      xIsNext: true
+    };
   }
 
   handleClick(i) {
@@ -75,20 +75,20 @@ class Game extends React.Component {
     squares[i] = this.state.xIsNext ? "X" : "O";
     this.setState({
       history: history.concat([
-      {
-        squares: squares }]),
-
-
+        {
+          squares: squares
+        }
+      ]),
       stepNumber: history.length,
-      xIsNext: !this.state.xIsNext });
-
+      xIsNext: !this.state.xIsNext
+    });
   }
 
   jumpTo(step) {
     this.setState({
       stepNumber: step,
-      xIsNext: step % 2 === 0 });
-
+      xIsNext: step % 2 === 0
+    });
   }
 
   render() {
@@ -98,11 +98,11 @@ class Game extends React.Component {
 
     const moves = history.map((step, move) => {
       const desc = move ? "Go to move #" + move : "Go to game start";
-      return /*#__PURE__*/(
-        React.createElement("li", { key: move }, /*#__PURE__*/
-        React.createElement("button", { onClick: () => this.jumpTo(move) }, desc)));
-
-
+      return (
+        <li key={move}>
+          <button onClick={() => this.jumpTo(move)}>{desc}</button>
+        </li>
+      );
     });
 
     let status;
@@ -112,45 +112,45 @@ class Game extends React.Component {
       status = "Next player: " + (this.state.xIsNext ? "X" : "O");
     }
 
-    return /*#__PURE__*/(
-      React.createElement("div", { className: "game" }, /*#__PURE__*/
-      React.createElement("div", { className: "game-board" }, /*#__PURE__*/
-      React.createElement(Board, {
-        squares: current.squares,
-        onClick: i => this.handleClick(i) })), /*#__PURE__*/
-
-
-      React.createElement("div", { className: "game-info" }, /*#__PURE__*/
-      React.createElement("div", null, status), /*#__PURE__*/
-      React.createElement("ol", null, moves))));
-
-
-
-  }}
-
+    return (
+      <div className="game">
+        <div className="game-board">
+          <Board
+            squares={current.squares}
+            onClick={(i) => this.handleClick(i)}
+          />
+        </div>
+        <div className="game-info">
+          <div>{status}</div>
+          <ol>{moves}</ol>
+        </div>
+      </div>
+    );
+  }
+}
 
 // ========================================
 
 const root = ReactDOM.createRoot(document.getElementById("root"));
-root.render( /*#__PURE__*/React.createElement(Game, null));
+root.render(<Game />);
 
 function calculateWinner(squares) {
   const lines = [
-  [0, 1, 2],
-  [3, 4, 5],
-  [6, 7, 8],
-  [0, 3, 6],
-  [1, 4, 7],
-  [2, 5, 8],
-  [0, 4, 8],
-  [2, 4, 6]];
-
-  for (let i = 0; i < lines.length; i++) {if (window.CP.shouldStopExecution(0)) break;
+    [0, 1, 2],
+    [3, 4, 5],
+    [6, 7, 8],
+    [0, 3, 6],
+    [1, 4, 7],
+    [2, 5, 8],
+    [0, 4, 8],
+    [2, 4, 6]
+  ];
+  for (let i = 0; i < lines.length; i++) {
     const [a, b, c] = lines[i];
     if (squares[a] && squares[a] === squares[b] && squares[a] === squares[c]) {
       return squares[a];
     }
-  }window.CP.exitedLoop(0);
+  }
   return null;
 }
      </script> 
