--- a/kanba/index.html
+++ b/kanba/index.html
@@ -10,6 +10,8 @@
       <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script> 
       <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script> 
       <script type="text/babel"> 
+      import React from 'react';
+import ReactDOM from 'react-dom';
          function Square(props) {
   return (
     <button className="square" onClick={props.onClick}>
