--- a/intro/index.html
+++ b/intro/index.html
@@ -234,7 +234,7 @@ const intervalId = window.setInterval(() => {
 );
       		</script>
    		</head>
-   	<body onload="htmlReady();">
+   	<body>
     <div class="wrapper">
     <p class="dream">
       <span>H</span>
