--- a/intro/index.html
+++ b/intro/index.html
@@ -2,19 +2,11 @@
 <html>
 	<head>
   <style>
-  @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,700&family=Roboto:ital,wght@1,100&display=swap');
-
-$blue: #233e51;
-$dark-purple: #463e50;
-$light-purple: #7f4855;
-$pink: #cc4b51;
-$orange: #df725d;
-$white: #f5f5f5;
-
+ @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,700&family=Roboto:ital,wght@1,100&display=swap");
 body {
   margin: 0;
   padding: 0;
-  background: linear-gradient( $orange, $pink, $light-purple, $dark-purple, $blue );
+  background: linear-gradient(#233e51,#463e50, #233e51);
   min-height: 100vh;
   display: flex;
   justify-content: center;
@@ -23,172 +15,136 @@ body {
   overflow: hidden;
 }
 
-.wrapper {
-  &:hover {
-    p span {
-      animation: smoke 1.75s ease-in forwards;
-    }
-  }
+.wrapper:hover p span {
+  animation: smoke 1.75s ease-in forwards;
 }
 
 p {
   opacity: 0;
   margin: 0;
-  font-style: italic;
-  color: $white;
-  filter: blur( 0.02vmin );
+  color: #f5f5f5;
+  filter: blur(0.02vmin);
   animation: fade-in 1s ease-in-out forwards;
-  text-shadow: 0 0 2vmin $orange;
-
-  span {
-    display: inline-block;
-  }
-
-  // Dream
-  &.dream {
-    font-size: 24vmin;
-    font-family: 'Playfair Display', serif;
-    font-weight: 700;
-    margin: -10% 0 -5%;
-    animation-delay: 1s;
-
-    span {
-      margin-left: -6%;
-
-      &:nth-child( 1 ) {
-        animation-delay: 0.6s;
-      }
-
-      &:nth-child( 2 ) {
-        animation-delay: 1s;
-      }
-
-      &:nth-child( 3 ) {
-        animation-delay: 0.8s;
-      }
-
-      &:nth-child( 4 ) {
-        animation-delay: 1.4s;
-      }
-
-      &:nth-child( 5 ) {
-        animation-delay: 1.2s;
-      }
-    }
-  }
-
-  // Dangerously
-  &.dangerously {
-    font-size: 9vmin;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 100;
-    text-transform: uppercase;
-    padding-left: 18%;
-    animation-delay: 1.5s;
-
-    span {
-      margin-left: -1.5%;
-
-      &:nth-child( 1 ) {
-        animation-delay: 1.4s;
-      }
-
-      &:nth-child( 2 ) {
-        animation-delay: 1.2s;
-      }
-
-      &:nth-child( 3 ) {
-        animation-delay: 1.6s;
-      }
-
-      &:nth-child( 4 ) {
-        animation-delay: 1.8s;
-      }
-
-      &:nth-child( 5 ) {
-        animation-delay: 2s;
-      }
-
-      &:nth-child( 6 ) {
-        animation-delay: 2.4s;
-      }
-
-      &:nth-child( 7 ) {
-        animation-delay: 2.2s;
-      }
-
-      &:nth-child( 8 ) {
-        animation-delay: 2.6s;
-      }
-
-      &:nth-child( 9 ) {
-        animation-delay: 2.8s;
-      }
-
-      &:nth-child( 10 ) {
-        animation-delay: 3.2s;
-      }
-
-      &:nth-child( 11 ) {
-        animation-delay: 3s;
-      }
-    }
-  }
+  text-shadow: 0 0 2vmin #df725d;
+}
+p span {
+  display: inline-block;
+}
+p.dream {
+  font-size: 16vmin;
+  font-weight: 700;
+  margin: -10% 0 -5%;
+  animation-delay: 1s;
+}
+p.dream span {
+  margin-left: -2%;
+}
+p.dream span:nth-child(1) {
+  animation-delay: 0.6s;
+}
+p.dream span:nth-child(2) {
+  animation-delay: 1s;
+}
+p.dream span:nth-child(3) {
+  animation-delay: 0.8s;
+}
+p.dream span:nth-child(4) {
+  animation-delay: 1.4s;
+}
+p.dream span:nth-child(5) {
+  animation-delay: 1.2s;
+}
+p.dangerously {
+  font-size: 12vmin;
+  font-weight: 100;
+  text-transform: uppercase;
+  padding-left: 6%;
+  animation-delay: 1.5s;
+}
+p.dangerously span {
+  margin-left: -1.5%;
+}
+p.dangerously span:nth-child(1) {
+  animation-delay: 1.4s;
+}
+p.dangerously span:nth-child(2) {
+  animation-delay: 1.2s;
+}
+p.dangerously span:nth-child(3) {
+  animation-delay: 1.6s;
+}
+p.dangerously span:nth-child(4) {
+  animation-delay: 1.8s;
+}
+p.dangerously span:nth-child(5) {
+  animation-delay: 2s;
+}
+p.dangerously span:nth-child(6) {
+  animation-delay: 2.4s;
+}
+p.dangerously span:nth-child(7) {
+  animation-delay: 2.2s;
+}
+p.dangerously span:nth-child(8) {
+  animation-delay: 2.6s;
+}
+p.dangerously span:nth-child(9) {
+  animation-delay: 2.8s;
+}
+p.dangerously span:nth-child(10) {
+  animation-delay: 3.2s;
+}
+p.dangerously span:nth-child(11) {
+  animation-delay: 3s;
 }
 
 .star {
-  $baseSize: 1px;
-
   position: absolute;
-  height: $baseSize;
-  width: $baseSize;
-  background-color: $white;
+  height: 1px;
+  width: 1px;
+  background-color: #f5f5f5;
   border-radius: 50%;
-  box-shadow: 0 0 4px 1px $white;
+  box-shadow: 0 0 4px 1px #f5f5f5;
   animation: twinkle 4s infinite;
-
-  &.medium {
-    height: $baseSize + 1;
-    width: $baseSize + 1;
-  }
+}
+.star.medium {
+  height: 2px;
+  width: 2px;
 }
 
-// ----- Animation ----- //
 @keyframes twinkle {
   0% {
-    opacity: .5;
+    opacity: 0.5;
   }
   50% {
     opacity: 1;
   }
   100% {
-    opacity: .5;
+    opacity: 0.5;
   }
 }
-
 @keyframes smoke {
   0% {
-    transform: rotate( 0deg ) translate3d( 0% ) skew( 0deg ) scale( 1 );
+    transform: rotate(0deg) translate3d(0%) skew(0deg) scale(1);
     opacity: 1;
-    filter: blur( 0.02vmin );
+    filter: blur(0.02vmin);
   }
   100% {
-    transform: rotate( 15deg ) translate3d( 85%, -75%, 0 ) skew( -30deg ) scale( 2 );
+    transform: rotate(15deg) translate3d(85%, -75%, 0) skew(-30deg) scale(2);
     opacity: 0;
-    filter: blur( 2.5vmin );
+    filter: blur(2.5vmin);
   }
 }
-
 @keyframes fade-in {
   0% {
     opacity: 0;
-    transform: translate3d( -2vmin, 2vmin, 0 );
-    filter: blur( 1vmin );
+    transform: translate3d(-2vmin, 2vmin, 0);
+    filter: blur(1vmin);
   }
   100% {
     opacity: 1;
-    transform: translate3d( 0 );
-    filter: blur( 0.02vmin );
+    transform: translate3d(0);
+    filter: blur(0.02vmin);
   }
 }
 </style>
@@ -235,27 +191,30 @@ const intervalId = window.setInterval(() => {
       		</script>
    		</head>
    	<body>
-    <div class="wrapper">
-    <p class="dream">
-      <span>H</span>
-      <span>B</span>
-      <span>H</span>
-      <span>G</span>
-      <span>A</span>
-    </p>
-    <p class="dangerously">
-      <span>d</span>
-      <span>a</span>
-      <span>n</span>
-      <span>g</span>
-      <span>e</span>
-      <span>r</span>
-      <span>o</span>
-      <span>u</span>
-      <span>s</span>
-      <span>l</span>
-      <span>y</span>
-    </p>
-  </div>
+	<div class="content">
+			<div class="wrapper">
+				<p class="dream">
+				  <span>H</span>
+				  <span>B</span>
+				  <span>H</span>
+				  <span>G</span>
+				  <span>A</span>
+				  <span>M</span>
+				  <span>E</span>
+				  
+				</p>
+				<br/><br/><br/>
+				<p class="dangerously">
+			  <span>V</span>
+			  <span>I</span>
+			  <span>Ệ</span>
+			  <span>T</span>
+			  <span> </span>
+			  <span>H</span>
+			  <span>Ó</span>
+			  <span>A</span>
+			</p>
+			</div>
+		</div>
    	</body>
 </html>
